<resources>
    <string name="app_name">Aplikasi PH Check</string>
    <string name="color_default">#000000</string>
    <string name="dialog_color_title">What is your color list names?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="unknown_color">Unknown Color</string>
    <string name="your_color">Your color</string>
    <string name="remove">Remove</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="take_picture">Take Picture</string>
    <string name="harap_login">Please, Sign In</string>
    <string name="type_your_name">type your name</string>
    <string name="type_password">******</string>
    <string name="logout">Logout</string>
    <string name="list_pengujian">List Pengujian</string>
    <string name="kadar_ph">Kadar pH</string>
    <string name="kategori_ph">Kategori pH :</string>
    <string name="tgl_pengujian">Tgl pengujian</string>
    <string name="title_dashboard">Mengecek kadar air kolam renang sangatlah penting untuk menjaga kualitas air kolam agar selalu stabil. Kualitas air yang stabil yaitu jika air memiliki kadah pH yang ideal. Selain itu, kolam juga harus selalu bersih dan juga jernih. \n Ayo cek pH air dengan CEK PH!</string>
    <string name="cek_ph_air">Cek pH air</string>
    <string name="hasil_cek_ph">Hasil cek pH</string>
    <string name="nama_user">Nama user</string>
    <string name="riwayat_pengujian_terbaru">Riwayat Pengujian Terbaru</string>
    <string name="uploading">Uploading ...</string>
</resources>